<resources>
    <string name="app_name">SuzanProject</string>
    <string name="user">User name</string>
    <string name="Pass">password</string>
    <string name="signin">sign in</string>
    <string name="signup">sign up</string>
    <string name="forgetmypass">forget my password</string>
    <string name="name">Name</string>
    <string name="last">Last Name</string>
    <string name="password">Password</string>
    <string name="password1">Password</string>
    <string name="repassword">Re Password</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="title_activity_signin2">SigninActivity2</string>
    <string name="title_activity_maps">Map</string>
</resources>
